Fix display overflow issues with large numbers

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 #calculator-body {
     border: 0.25em solid black;
     border-radius: 0.25em;
-    width: 20em;
+    width: 26em;
     padding: 0.75em;
     background-color: lightgreen;
     margin-left:auto;
@@ -35,11 +35,12 @@ body {
     font-family: pixelated;
     display: flex;
     flex-direction: column;
-    font-size: 1.5em; 
+    font-size: 1em; 
     text-align: right;
     padding: 0.5em;
+    padding-top: 1em;
     margin: 0.1em;
-    padding-bottom: 0.25em;
+    padding-bottom: 0.5em;
     background-color: #484848;
     color: white;
     border-radius: 0.1em;
